// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard: Introduction Css renders 1`] = `
<Fragment>
  <h2
    id="css"
  >
    CSS
  </h2>
  <p>
    Copy-paste the stylesheet 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;link&gt;
    </PrismCode>
     into your 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;head&gt;
    </PrismCode>
     before all other stylesheets to load our CSS.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <link
      href="https://design.undefined.com/TEST/styles/design.css"
      rel="stylesheet"
    />
    <link
      href="https://design.undefined.com/TEST/styles/design-dashboard.css"
      rel="stylesheet"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction JavaScript renders 1`] = `
<Fragment>
  <h2
    id="javascript"
  >
    JavaScript
  </h2>
  <p>
    The dashboard theme requires a separate script to run properly. So add the dashboard script below the 
    <Property
      value="scripts"
    />
     at the bottom of your 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;body&gt;
    </PrismCode>
     tag like this:
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
  >
    <script
      src="https://design.undefined.com/TEST/scripts/design-script.js"
    />
    <script
      src="https://design.undefined.com/TEST/scripts/design-dashboard.js"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Dashboard: Introduction QuickStart renders 1`] = `
<Fragment>
  <h2
    id="quick-start"
  >
    Quick start
  </h2>
  <p>
    To quickly add the dashboard theme to your project, include the snippets below in your project.
  </p>
</Fragment>
`;

exports[`Dashboard: Introduction renders 1`] = `
<DocContainer>
  <p
    className="lead"
  >
    Get started with the 
     DesignGuide Dashboard theme.
  </p>
  <QuickStart />
  <JavaScript />
</DocContainer>
`;
